--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">Bayae</string>
     <string name="game_select">游戏</string>
-    <string name="game_name">填词高手</string>
+    <string name="game_name">填词勇士</string>
     <string name="game_next">下一个</string>
     <string name="game_text">n.因素，要素</string>
     <string name="finish">已完成</string>
@@ -13,4 +13,5 @@
     <string name="right">0</string>
     <string name="all">10</string>
     <string name="divider">/</string>
+    <string name="run_tip">勇士出发中</string>
 </resources>
